--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -59,7 +59,7 @@ body.theme-dark {
         height: 100px;
         background-size: contain;
         background-repeat: no-repeat;
-        background-image: url(/img/Logo-light.svg);
+        background-image: url(/img/Logo-light-plant.svg);
         margin-bottom: 5px; /* Change margin-right to margin-bottom */
         background-position: center; /* Adjust the background-position to center */
     }
@@ -176,7 +176,7 @@ body.theme-light {
         height: 100px;
         background-size: contain;
         background-repeat: no-repeat;
-        background-image: url(/img/Logo-dark.svg);
+        background-image: url(/img/Logo-dark_plant.svg);
         margin-bottom: 5px; /* Change margin-right to margin-bottom */
         background-position: center; /* Adjust the background-position to center */
     } 
