--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -765,3 +765,10 @@ body.backlinks-note-icon .backlink[data-note-icon="withered"]::before {
         }
     }
 }
+
+.filter-element {
+    margin-bottom: 10px; /* Adjust the value as needed */
+    padding-left: 10px; /* Adjust the value as needed */
+    padding-right: 10px; /* Adjust the value as needed */
+}
+
