--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -177,7 +177,7 @@ body.theme-light {
         height: 100px;
         background-size: contain;
         background-repeat: no-repeat;
-        background-image: url(/img/fr-light.png);
+        background-image: url(/img/fr-dark.png);
         margin-bottom: 5px; /* Change margin-right to margin-bottom */
         background-position: center; /* Adjust the background-position to center */
     } 
