--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -773,3 +773,7 @@ body.backlinks-note-icon .backlink[data-note-icon="withered"]::before {
     padding-right: 10px; /* Adjust the value as needed */
 }
 
+.timestamps {
+    display: none;
+}
+
