--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -773,7 +773,7 @@ body.backlinks-note-icon .backlink[data-note-icon="withered"]::before {
     padding-right: 10px; /* Adjust the value as needed */
 }
 
-.timestamps {
+.header-meta {
     display: none;
 }
 
