--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -236,12 +236,13 @@ body.theme-light {
 }
 
 body {
-    --h1-size: 2em;
-    --h2-size: 1.75em;
-    --h3-size: 1.55em;
-    --h4-size: 1.25em;
-    --h5-size: 1.12em;
-    --h6-size: 1.12em;
+    --h1-size: 1.75em;
+    --h2-size: 1.25em;
+    --h3-size: 1.15em;
+    --h4-size: 1.05em;
+    --h5-size: 1.0em;
+    --h6-size: 1.0em;
+    --p-size: 0.5em;
     --graph-main: var(--text-accent-hover);
     --graph-muted: rgba(126, 126, 126, 0.5);
 
