--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -55,15 +55,20 @@ body.theme-dark {
     
     nav.filetree-sidebar h1::before {
         content: " ";
-        display: block; /* Change this to block */
-        width: 100%; /* Adjust the width to 100% */
+        display: block;
+        width: 100%;
         height: 200px;
         background-size: contain;
         background-repeat: no-repeat;
         background-image: url(/img/fr-light.png);
-        margin-bottom: 5px; /* Change margin-right to margin-bottom */
-        background-position: center; /* Adjust the background-position to center */
+        margin-bottom: 5px;
+        background-position: center;
     }
+    
+    nav.filetree-sidebar h1 {
+        display: none; /* Completely hides the text and its space */
+    }
+
     
     #floating-control {
         position: fixed;
@@ -181,6 +186,10 @@ body.theme-light {
         margin-bottom: 5px; /* Change margin-right to margin-bottom */
         background-position: center; /* Adjust the background-position to center */
     } 
+
+    nav.filetree-sidebar h1 {
+        display: none; /* Completely hides the text and its space */
+    }
     
     #floating-control {
         position: fixed;
