--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -66,7 +66,8 @@ body.theme-dark {
     }
     
     nav.filetree-sidebar h1 {
-        display: none; /* Completely hides the text and its space */
+        visibility: hidden; /* Hide the text but keep its space */
+        display: inline-block; /* Ensure it still takes up space */
     }
 
     
@@ -188,7 +189,8 @@ body.theme-light {
     } 
 
     nav.filetree-sidebar h1 {
-        display: none; /* Completely hides the text and its space */
+        visibility: hidden; /* Hide the text but keep its space */
+        display: inline-block; /* Ensure it still takes up space */
     }
     
     #floating-control {
