--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -53,17 +53,18 @@ body.theme-dark {
         background-color: #1E1E1E;
     }
     
-    nav.filetree-sidebar h1::before {
+   nav.filetree-sidebar h1::before {
         content: " ";
-        display: block;
-        width: 100%;
+        display: block; /* Change this to block */
+        width: 100%; /* Adjust the width to 100% */
         height: 200px;
         background-size: contain;
         background-repeat: no-repeat;
         background-image: url(/img/fr-light.png);
-        margin-bottom: 5px;
-        background-position: center;
+        margin-bottom: 5px; /* Change margin-right to margin-bottom */
+        background-position: center; /* Adjust the background-position to center */
     }
+
     
     #floating-control {
         position: fixed;
@@ -180,7 +181,8 @@ body.theme-light {
         background-image: url(/img/fr-dark.png);
         margin-bottom: 5px; /* Change margin-right to margin-bottom */
         background-position: center; /* Adjust the background-position to center */
-    } 
+    }
+
     
     #floating-control {
         position: fixed;
