--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -57,12 +57,17 @@ body.theme-dark {
         content: " ";
         display: block; /* Change this to block */
         width: 100%; /* Adjust the width to 100% */
-        height: 100px;
+        height: 200px;
         background-size: contain;
         background-repeat: no-repeat;
         background-image: url(/img/fr-light.png);
         margin-bottom: 5px; /* Change margin-right to margin-bottom */
         background-position: center; /* Adjust the background-position to center */
+    }
+
+    nav.filetree-sidebar h1 {
+        visibility: hidden; /* Hides the text but keeps the space */
+        position: relative; /* Ensures proper positioning */
     }
     
     #floating-control {
@@ -174,13 +179,18 @@ body.theme-light {
         content: " ";
         display: block; /* Change this to block */
         width: 100%; /* Adjust the width to 100% */
-        height: 100px;
+        height: 200px;
         background-size: contain;
         background-repeat: no-repeat;
         background-image: url(/img/fr-dark.png);
         margin-bottom: 5px; /* Change margin-right to margin-bottom */
         background-position: center; /* Adjust the background-position to center */
     } 
+
+    nav.filetree-sidebar h1 {
+        visibility: hidden; /* Hides the text but keeps the space */
+        position: relative; /* Ensures proper positioning */
+    }
     
     #floating-control {
         position: fixed;
