--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -52,17 +52,23 @@ body.theme-dark {
     .wl-editor {
         background-color: #1E1E1E;
     }
+
+    /* Hide the entire h1 element */
+    nav.filetree-sidebar h1 {
+        display: none;
+    }
     
-    nav.filetree-sidebar h1::before {
+    /* Add the icon using a new container */
+    nav.filetree-sidebar::after {
         content: " ";
-        display: block; /* Change this to block */
-        width: 100%; /* Adjust the width to 100% */
+        display: block;
+        width: 100%;
         height: 200px;
         background-size: contain;
         background-repeat: no-repeat;
-        background-image: url(/img/fr-light.png);
-        margin-bottom: 5px; /* Change margin-right to margin-bottom */
-        background-position: center; /* Adjust the background-position to center */
+        background-image: url(/img/fr-dark.png);
+        margin-bottom: 5px;
+        background-position: center;
     }
 
     
@@ -171,17 +177,22 @@ body.theme-light {
         background-color: #FFFFFF;
     }
     
-    nav.filetree-sidebar h1::before {
+    /* Hide the entire h1 element */
+    nav.filetree-sidebar h1 {
+        display: none;
+    }
+    
+    /* Add the icon using a new container */
+    nav.filetree-sidebar::after {
         content: " ";
-        display: block; /* Change this to block */
-        width: 100%; /* Adjust the width to 100% */
+        display: block;
+        width: 100%;
         height: 200px;
         background-size: contain;
         background-repeat: no-repeat;
-        background-image: url(/img/fr-dark.png);
-        margin-bottom: 5px; /* Change margin-right to margin-bottom */
-        background-position: center; /* Adjust the background-position to center */
-    } 
+        background-image: url(/img/fr-light.png);
+        margin-bottom: 5px;
+        background-position: center;
 
     
     #floating-control {
