--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -193,7 +193,7 @@ body.theme-light {
         background-image: url(/img/fr-light.png);
         margin-bottom: 5px;
         background-position: center;
-
+    }
     
     #floating-control {
         position: fixed;
